Fix SVG icon alignment in `ContextMenuItem` (#840)
* Add WithIcons story.

* Test svg and web-font icons.

* Align svg icon.

* Correctly render svg icon in ContextSubMenu.

* NextVersion.md

* rush change

* PR numbers

--- a/ui/core-react/src/core-react/contextmenu/ContextMenu.scss
+++ b/ui/core-react/src/core-react/contextmenu/ContextMenu.scss
@@ -131,6 +131,8 @@ $uicore-menu-top-bottom-padding: calc(#{$uicore-menu-padding} * 0.6667);
         text-align: center;
         margin-right: $uicore-unbordered-padding;
         opacity: $uicore-opacity-2;
+        display: flex;
+        align-items: center;
 
         &.core-context-menu-icon-right {
           margin-left: $uicore-unbordered-padding;
